deployment/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: investudy-file-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: investudy-file-manager
  template:
    metadata:
      labels:
        app: investudy-file-manager
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: investudy-file-manager
          image: investudy/file-manager:0.0.14
          ports:
          - containerPort: 80
          volumeMounts:
            - name: fl-volume
              mountPath: /app/wwwroot
      volumes:
        - name: fl-volume
          persistentVolumeClaim:
            claimName: fl-pvc
