deployment/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: investudy-file-manager-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: investudy-file-manager
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31007
